# epub-metadata-extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yaml
nextory/: model.py
src/agent/: gemini.py  librarian.py  librarian_model.py  model.py
src/models/: book.py
src/task/: book_model.py  process_book.py
src/tool/: csv_parser.py  epub.py
src/utils/: logger.py
tests/: test_main.py
tests/agent/: test_librarian.py
tests/fixtures/: sample_data.csv
tests/task/: test_process_book.py
tests/tool/: test_csv_parser.py  test_epub.py
